Fix layout bug

--- a/css/layout.css
+++ b/css/layout.css
@@ -31,7 +31,6 @@
 }
 
 #board.layout-trello-horizcards .js-list-content {
-    max-height: 40vh;
     flex-direction: row;
     flex-wrap: wrap;
 }
